--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <paths>
-        <external-path path="" name="output_image"/>;
+
+
+    <paths xmlns:android="http://schemas.android.com/apk/res/android">
+        <external-path name="image" path="DCIM/Camera"/>
     </paths>
 </PreferenceScreen>
