--- a/app/src/main/res/layout/activity_photoalbum.xml
+++ b/app/src/main/res/layout/activity_photoalbum.xml
@@ -2,5 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+<Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/choose_from_album"
+    android:text="Choose"/>
 
+    <ImageView
+        android:layout_width="277dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        />
 </LinearLayout>
